--- a/templates/browserconfig.xml.twig
+++ b/templates/browserconfig.xml.twig
@@ -3,23 +3,24 @@
     | |  _  _| |_  _| |__ _  _| |__ _  _
     | |_| || | | || | '_ \ || | '_ \ || |
     |____\_,_|_|\_,_|_.__/\_,_|_.__/\_,_|
-    
+
     Copyright © Lulububu Software GmbH - All Rights Reserved
     https://lulububu.de
-    
+
     Unauthorized copying of this file, via any medium is strictly prohibited!
     Proprietary and confidential.
 #}
+{#- -#}
 
 <?xml version="1.0" encoding="utf-8"?>
 <browserconfig>
     <msapplication>
         <tile>
-            <square70x70logo src="/mstile-70x70.png"/>
-            <square150x150logo src="/mstile-150x150.png"/>
-            <wide310x150logo src="/mstile-310x150.png"/>
-            <square310x310logo src="/mstile-310x310.png"/>
-            <TileColor>{{- settings.tilecolor ? settings.tilecolor : '#ffffff' -}}</TileColor>
+            <square70x70logo src="/mstile-70x70.png" />
+            <square150x150logo src="/mstile-150x150.png" />
+            <wide310x150logo src="/mstile-310x150.png" />
+            <square310x310logo src="/mstile-310x310.png" />
+            <TileColor>{{- settings.tilecolor is not empty ? settings.tilecolor : '#ffffff' -}}</TileColor>
         </tile>
     </msapplication>
 </browserconfig>
