Fixed the tile color field

--- a/templates/yandex-browser-manifest.json.twig
+++ b/templates/yandex-browser-manifest.json.twig
@@ -16,7 +16,7 @@
   "api_version": 1,
   "layout": {
     "logo": "/yandex-browser-50x50.png",
-    "color": "{{- settings.tilecolor is not empty ? settings.tilecolor : '#ffffff' -}}",
+    "color": "{{- settings.tilecolor -}}",
     "show_title": true
   }
 }
