--- a/templates/browserconfig.xml.twig
+++ b/templates/browserconfig.xml.twig
@@ -20,7 +20,7 @@
             <square150x150logo src="/mstile-150x150.png" />
             <wide310x150logo src="/mstile-310x150.png" />
             <square310x310logo src="/mstile-310x310.png" />
-            <TileColor>{{- settings.tilecolor is not empty ? settings.tilecolor : '#ffffff' -}}</TileColor>
+            <TileColor>{{- settings.tilecolor -}}</TileColor>
         </tile>
     </msapplication>
 </browserconfig>
