--- a/templates/manifest.json.twig
+++ b/templates/manifest.json.twig
@@ -21,8 +21,8 @@
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/?homescreen=1",
-  "background_color": "{{- settings.tilecolor is not empty ? settings.tilecolor : '#ffffff' -}}",
-  "theme_color": "{{- settings.tilecolor is not empty ? settings.tilecolor : '#ffffff' -}}",
+  "background_color": "{{- settings.tilecolor -}}",
+  "theme_color": "{{- settings.tilecolor -}}",
   "icons": [
     {
       "src": "/android-chrome-36x36.png",
